--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,7 +1,3 @@
-.netsage_boilerplate-custom-style {
-  background: #f8ae63;
-}
-
 div.tooltip {
   position: absolute;
   text-align: left;
@@ -33,7 +29,7 @@ div.tooltip {
   padding: 10px;
 }
 
-.tick text {
+.tick-text {
   width: 300px;
   word-wrap: break-word;
   padding: 0;
