fix text colors

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,10 +18,10 @@ div.tooltip {
   font-weight: bold;
 }
 
-.dropdown-text {
+/* .dropdown-text {
   text-align: right;
   font: 14px sans-serif;
-}
+} */
 
 .tick {
   width: 300px;
